--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -16,6 +16,22 @@ aside {
   font-family: sans-serif;
   font-weight: 600;
 }
+
+.progress {
+  background: gray;
+  height: 2rem;
+  cursor: crosshair;
+  overflow: hidden;
+}
+.progress__time {
+  background: green;
+  border-right: 1px solid rgba(0, 0, 0, 0.1);
+  min-width: 20px;
+  height: 100%;
+  transition: width 0.1s;
+  background: yellow;
+}
+
 article,
 aside,
 details,
