--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -8,25 +8,17 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-aside {
-  width: 100%;
-  max-width: 300px;
-  font-size: 15px;
-  line-height: 1.4;
-  font-family: sans-serif;
-  font-weight: 600;
-}
 
 .progress {
   background: gray;
-  height: 2rem;
+  /* height: 2rem; */
   cursor: crosshair;
   overflow: hidden;
 }
 .progress__time {
   background: green;
   border-right: 1px solid rgba(0, 0, 0, 0.1);
-  min-width: 20px;
+  min-width: 5px;
   height: 100%;
   transition: width 0.1s;
   background: yellow;
@@ -647,13 +639,18 @@ pre tt:after {
 }
 
 .bars {
-  height: 30px;
-  width: 40px;
+  height: 45px;
+  width: 0;
   position: relative;
+  top: -9px;
+  left: -1px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .bar {
-  background: green;
+  background: #a085ff;
   bottom: 1px;
   height: 3px;
   position: absolute;
@@ -668,54 +665,79 @@ pre tt:after {
 @keyframes sound {
   0% {
     opacity: 0.35;
-    background: green;
-    height: 3px;
+    background: #a085ff;
+    width: 3px;
   }
   100% {
     opacity: 1;
-    background: green;
-    height: 28px;
+    background: #a085ff;
+    width: 10px;
   }
 }
 
 .bar:nth-child(1) {
-  left: 1px;
+  top: 1px;
   animation-duration: 474ms;
 }
 .bar:nth-child(2) {
-  left: 5px;
+  top: 5px;
   animation-duration: 433ms;
 }
 .bar:nth-child(3) {
-  left: 9px;
+  top: 9px;
   animation-duration: 407ms;
 }
 .bar:nth-child(4) {
-  left: 13px;
+  top: 13px;
   animation-duration: 458ms;
 }
 .bar:nth-child(5) {
-  left: 17px;
+  top: 17px;
   animation-duration: 400ms;
 }
 .bar:nth-child(6) {
-  left: 21px;
+  top: 21px;
   animation-duration: 427ms;
 }
 .bar:nth-child(7) {
-  left: 25px;
+  top: 25px;
   animation-duration: 441ms;
 }
 .bar:nth-child(8) {
-  left: 29px;
+  top: 29px;
   animation-duration: 419ms;
 }
 .bar:nth-child(9) {
-  left: 33px;
+  top: 33px;
   animation-duration: 487ms;
 }
 
 .bar:nth-child(10) {
-  left: 37px;
+  top: 37px;
   animation-duration: 442ms;
+}
+
+.bar:nth-child(11) {
+  top: 41px;
+  animation-duration: 435ms;
+}
+
+.bar:nth-child(12) {
+  top: 45px;
+  animation-duration: 510ms;
+}
+
+.bar:nth-child(13) {
+  top: 49px;
+  animation-duration: 485ms;
+}
+
+.bar:nth-child(14) {
+  top: 53px;
+  animation-duration: 455ms;
+}
+
+.bar:nth-child(15) {
+  top: 57px;
+  animation-duration: 425ms;
 }
